--- a/abilityk/build.gradle
+++ b/abilityk/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     //qrcodek
     implementation 'com.google.zxing:android-core:3.3.0'
     implementation 'com.google.zxing:core:3.3.3'
-    implementation 'com.github.a-voyager:AutoInstaller:v1.1'
+    //implementation 'com.github.a-voyager:AutoInstaller:v1.1'
 
     //adaptk
     api 'me.jessyan:autosize:1.2.1'
