--- a/componentktest/src/main/AndroidManifest.xml
+++ b/componentktest/src/main/AndroidManifest.xml
@@ -34,15 +34,6 @@
         <activity
             android:name="com.mozhimen.componentktest.installk.InstallKActivity"
             android:exported="false" />
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.mozhimen.componentktest.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/files_path" />
-        </provider>
         <service
             android:name=".installk.InstallKService"
             android:enabled="true"
@@ -57,7 +48,7 @@
                 android:resource="@xml/installk_smart_accessibility_service_config" />
         </service>
         <receiver
-            android:name=".installk.InstallReceiver"
+            android:name=".installk.InstallKReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="100">
