--- a/uicorektest/src/main/AndroidManifest.xml
+++ b/uicorektest/src/main/AndroidManifest.xml
@@ -59,6 +59,9 @@
             android:name=".layoutk.LayoutKEmptyActivity"
             android:exported="false" />
         <activity
+            android:name=".layoutk.LayoutKGridFillActivity"
+            android:exported="false" />
+        <activity
             android:name=".layoutk.LayoutKVideoActivity"
             android:exported="false" />
         <activity
