--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity
             android:name=".elemk.receiver.ElemKReceiverActivity"
             android:exported="false" />
+        <activity
+            android:name=".elemk.ElemKGestureActivity"
+            android:exported="false" />
 
         <service android:name=".elemk.service.ElemKService" />
 
