--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:name=".elemk.receiver.ElemKReceiverActivity"
             android:exported="false" />
         <activity
-            android:name=".elemk.ElemKGestureActivity"
+            android:name=".elemk.gesture.ElemKGestureActivity"
             android:exported="false" />
 
         <service android:name=".elemk.service.ElemKService" />
