--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.mozhimen.basicktest"
         minSdk rootProject.android.minSdk
-        targetSdk rootProject.android.targetSdk
+        targetSdk 25
         versionCode rootProject.android.versionCode
         versionName rootProject.android.versionName
 
