--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -88,9 +88,11 @@ dependencies {
     //api 'com.github.bumptech.glide:glide:4.12.0'//图片加载库
     //kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //concurrent
     api "androidx.concurrent:concurrent-futures:1.1.0"
     api "androidx.concurrent:concurrent-futures-ktx:1.1.0"
 
+    //firebase
     api 'com.google.firebase:firebase-crashlytics-buildtools:2.9.2'
 
     //test
