--- a/componentktest/build.gradle
+++ b/componentktest/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(':componentk')
     implementation project(':uicorek')
     implementation project(':debugk')
+    implementation 'com.github.mozhimen.CameraKit_UVC:camerak_uvc:1.0.4'
 
     testImplementation 'junit:junit:4.13.2'
 }
