--- a/underlayktest/build.gradle
+++ b/underlayktest/build.gradle
@@ -37,4 +37,5 @@ android {
 dependencies {
     implementation project(':underlayk')
     implementation project(':basick')
+    implementation project(':debugk')
 }
