--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -97,4 +97,6 @@ dependencies {
 
     //test
     testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
