--- a/underlayk/build.gradle
+++ b/underlayk/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     implementation 'com.github.mozhimen:CrashKit_Native:1.0.0'
     implementation project(project.path.replace(project.name, '') +  ':basick')
     implementation project(project.path.replace(project.name, '') +  ':uicorek')
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 
