--- a/abilityk/build.gradle
+++ b/abilityk/build.gradle
@@ -43,4 +43,9 @@ dependencies {
 
     //adaptk
     api 'me.jessyan:autosize:1.2.1'
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
