--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://maven.aliyun.com/repository/grails-core' }
+        maven { url 'https://gitee.com/liuchaoya/libcommon/raw/master/repository/' }
         maven { url 'https://www.jitpack.io' }
         mavenCentral()
         google()
