--- a/abilityktest/build.gradle
+++ b/abilityktest/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "com.mozhimen.abilityktest"
         minSdk rootProject.android.minSdk
         targetSdk rootProject.android.targetSdk
-        versionCode 3
+        versionCode rootProject.android.versionCode
         versionName rootProject.android.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,4 +40,9 @@ dependencies {
     implementation project(':abilityk')
     implementation project(':componentk')
     implementation project(':uicorek')
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
