--- a/debugk/build.gradle
+++ b/debugk/build.gradle
@@ -50,9 +50,11 @@ dependencies {
     //leakk
     //debugImplementation 'io.github.knight-zxw:blockcanary:0.0.4'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 static def buildTime() {
