--- a/debugktest/build.gradle
+++ b/debugktest/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     implementation project(':basick')
     implementation project(':debugk')
     implementation project(':componentk')
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
