--- a/componentk/build.gradle
+++ b/componentk/build.gradle
@@ -59,4 +59,9 @@ dependencies {
     implementation project(project.path.replace(project.name, '') + ':basick')
     implementation project(project.path.replace(project.name, '') + ':uicorek')
     implementation project(project.path.replace(project.name, '') + ':underlayk')
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
