--- a/uicorektest/build.gradle
+++ b/uicorektest/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation project(':uicorek')
     implementation project(':basick')
     implementation project(':componentk')
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
