--- a/componentk/src/main/AndroidManifest.xml
+++ b/componentk/src/main/AndroidManifest.xml
@@ -30,14 +30,22 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
 
-<!--        <receiver-->
-<!--            android:name=".netk.file.download.SystemDownloadReceiver"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />-->
-<!--                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />-->
-<!--            </intent-filter>-->
-<!--        </receiver>-->
+        <receiver
+            android:name=".netk.file.download.SystemDownloadReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".netk.file.download.DownloadService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="${applicationId}.DownloadService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
