--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,9 @@ dependencyResolutionManagement {
         maven { url 'https://maven.aliyun.com/repository/grails-core' }
         maven { url 'https://raw.githubusercontent.com/saki4510t/libcommon/master/repository/' }
         maven { url 'https://gitee.com/liuchaoya/libcommon/raw/master/repository/' }
+        maven { url "https://repo.eclipse.org/content/repositories/paho-snapshots/" }
+        maven { url 'https://developer.huawei.com/repo/' }
+        maven { url "https://jitpack.io" }
         maven { url 'https://www.jitpack.io' }
         mavenCentral()
         google()
