--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 # avoid inside android:testOnly="true"
 android.injected.testOnly=false
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
