--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation project(':debugk')
     implementation project(':componentk')
     implementation project(':uicorek')
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //test
     testImplementation 'junit:junit:4.13.2'
