--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     //gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    //kotlin
+    //implementation 'org. jetbrains.kotlinx: kotlinx-serialization-json:1.3.2'
+
     //////////////////////////////////////////////////////////////////
     //load image
     //coil
