--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.core:core-ktx:1.7.0'
     api 'com.google.android.material:material:1.5.0'
+    api 'androidx.fragment:fragment-ktx:1.4.0'
+    //api 'androidx.activity:activity-ktx:1.7.2'
 
     //////////////////////////////////////////////////////////////////
     //multidex
@@ -85,7 +87,6 @@ dependencies {
 
     //////////////////////////////////////////////////////////////////
     //lifecycle
-    api "androidx.fragment:fragment-ktx:1.4.0"
     api 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha03'
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha03'
     api "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0"
