--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     api "io.reactivex.rxjava2:rxjava:2.2.14"
     api "io.reactivex.rxjava2:rxandroid:2.1.1"
 
+    //work manager
+    api 'androidx.work:work-runtime:2.8.1'
+
     //////////////////////////////////////////////////////////////////
     //databinding
     api 'androidx.databinding:databinding-common:7.1.2'
@@ -121,7 +124,6 @@ dependencies {
     api 'io.coil-kt:coil:2.2.0'
     api 'io.coil-kt:coil-gif:2.2.0'
     api 'io.coil-kt:coil-svg:2.2.0'
-    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 
     //glide
     //api 'com.github.bumptech.glide:glide:4.12.0'//图片加载库
@@ -130,6 +132,10 @@ dependencies {
     //////////////////////////////////////////////////////////////////
     //firebase
     api 'com.google.firebase:firebase-crashlytics-buildtools:2.9.2'
+
+    //////////////////////////////////////////////////////////////////
+    //net
+    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 
     //////////////////////////////////////////////////////////////////
     //test
