--- a/componentk/build.gradle
+++ b/componentk/build.gradle
@@ -38,13 +38,15 @@ android {
 }
 
 dependencies {
-    //restfulk
+    //netk_http
     api 'com.squareup.retrofit2:retrofit:2.9.0'//retrofit
     api "com.squareup.okhttp3:logging-interceptor:4.9.2"
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api "com.squareup.retrofit2:converter-moshi:2.9.0"
     api 'com.squareup.retrofit2:converter-scalars:2.5.0'
     api "com.squareup.retrofit2:adapter-rxjava2:2.6.1"
+
+    //netk_file
     api 'com.liulishuo.okdownload:okdownload:1.0.7'
     api 'com.liulishuo.okdownload:sqlite:1.0.7'
     api 'in.xiandan:okdownload-ext:1.0.7'
