--- a/uicorek/build.gradle
+++ b/uicorek/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     api "com.airbnb.android:lottie:3.6.1"
 
     //adaptk
-    api 'me.jessyan:autosize:1.2.1'
+    //api 'me.jessyan:autosize:1.2.1'
 
     //test
     testImplementation 'junit:junit:4.13.2'
