--- a/uicorektest/src/main/AndroidManifest.xml
+++ b/uicorektest/src/main/AndroidManifest.xml
@@ -11,6 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwiftKit">
 
+<!--        <meta-data-->
+<!--            android:name="design_width_in_dp"-->
+<!--            android:value="800"/>-->
+<!--        <meta-data-->
+<!--            android:name="design_height_in_dp"-->
+<!--            android:value="1280"/>-->
+
         <activity
             android:name=".UicoreKActivity"
             android:exported="true">
@@ -19,7 +26,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+        </activity>
+        <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+        <!-- toastk -->
+        <activity
+            android:name=".toastk.ToastKActivity"
+            android:exported="false" />
+        <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- adaptk -->
         <activity
             android:name=".adaptk.AdaptKActivity"
