--- a/uicorektest/build.gradle
+++ b/uicorektest/build.gradle
@@ -33,6 +33,10 @@ android {
     buildFeatures{
         dataBinding true
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
